# geologia

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: function-call.rs  generate-content-stream.rs  generate-content.rs  generate-image.rs  raw_sse.rs  sse.rs
skill/: SKILL.md
src/: client.rs  dialogue.rs  error.rs  lib.rs
src/network/: event_source.rs  mod.rs
src/types/: common.rs  count_tokens.rs  error.rs  generate_content.rs  mod.rs  predict_image.rs  text_embeddings.rs
