
[package]
name = "google-genai"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadqueue = "0.2"
# reqwest-eventsource is incompatible with reqwest 0.13. Only update after the
# a new version of reqwest-eventsource is published.
reqwest = { version = "0.12", features = ["json", "gzip"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_with = { version = "3.16", features = ["base64"] }
tracing = "0.1"
tokio = { version = "1" }
tokio-stream = "0.1"
async-stream = "0.3.6"
tokio-util = "0.7.18"
async-trait = "0.1.89"

[dev-dependencies]
console = "0.16.2"
dialoguer = "0.12.0"
dotenvy = "0.15.7"
image = "0.25.9"
indicatif = "0.18.3"
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = "0.3.22"
