
[package]
name = "google-genai"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13", features = ["json", "gzip", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_with = { version = "3.16", features = ["base64"] }
tracing = "0.1"
tokio = { version = "1" }
tokio-stream = "0.1"
tokio-util = "0.7.18"

[dev-dependencies]
console = "0.16.2"
dialoguer = "0.12.0"
dotenvy = "0.15.7"
image = "0.25.9"
indicatif = "0.18.3"
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = "0.3.22"
