
[package]
name = "geologia"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13", features = ["json", "gzip", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_with = { version = "3.18", features = ["base64"] }
tracing = "0.1"
tokio = { version = "1" }
tokio-stream = "0.1"
tokio-util = "0.7.18"

[dev-dependencies]
console = "0.16.3"
dialoguer = "0.12.0"
dotenvy = "0.15.7"
image = "0.25.10"
indicatif = "0.18.4"
tokio = { version = "1.51.0", features = ["full"] }
tracing-subscriber = "0.3.23"
